--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-list-fix",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
   "main": "react-list.js",
   "scripts": {
     "prepublish": "cogs"
   },
-  "repository": "ratson/react-list",
+  "repository": "ratson/react-list-fix",
   "peerDependencies": {
     "react": "0.14 || >= 15.0.0-rc.1 < 16",
     "react-dom": "0.14 || >= 15.0.0-rc.1 < 16"
