--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "main": "react-list.js",
   "scripts": {
-    "prepublish": "cogs"
+    "prepublish": "babel react-list.es6 examples/index.es6 -d ."
   },
   "repository": "ratson/react-list-fix",
   "peerDependencies": {
@@ -12,8 +12,11 @@
     "react-dom": "0.14 || >= 15.0.0-rc.1 < 16"
   },
   "devDependencies": {
-    "cogs": "1.0.8",
-    "cogs-transformer-babel": "1.0.12",
-    "cogs-transformer-replace": "1.0.1"
+    "babel-cli": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
