--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "prop-types": "^15.5.8"
   },
   "peerDependencies": {
-    "react": "0.14 || 15",
-    "react-dom": "0.14 || 15"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-eslint": "7.1.1",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "6.16.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "eslint-plugin-react": "6.8.0",
-    "eslint": "3.12.2"
+    "babel-preset-stage-0": "^6.24.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint": "^3.19.0"
   }
 }
