--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "main": "react-list.js",
   "scripts": {
-    "prepublish": "babel react-list.es6 -d ."
+    "prepublish": "babel react-list.es6 -d .",
+    "test": "eslint react-list.es6"
   },
   "repository": "ratson/react-list-fix",
   "dependencies": {
